--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   
   <ul class="post-list">
 
-  {% assign grouped = site.docs | group_by: 'category' %}
+  {% assign grouped = site.events | group_by: 'category' %}
   {% for group in grouped %}
       <li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
           {% assign items = group.items | sort: 'order' %}
